🎯 Add Codeforces solution